# Sample

./: .gitignore  pyproject.toml
.github/workflows/: ci.yml
random_quote_generator/: app.py
tests/: test_app.py
